Include paths correction code optimization

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,8 +2,13 @@
 platform = ststm32
 board = bluepill_f103c8
 framework = stm32cube
+build_flags =   -I./Inc
+                -I./lib
+                -I./lib/HardwareServo
+
 
 [platformio]
 include_dir = Inc
 src_dir = Src
+default_envs = bluepill_f103c8
 
