Configured project for unit testing

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,13 +2,26 @@
 platform = ststm32
 board = bluepill_f103c8
 framework = stm32cube
+
 build_flags =   -I./Inc
-                -I./lib
-                -I./lib/HardwareServo
+                -DMAX_RPM=12000
+
+[env:native]
+platform = native
+
+lib_ignore = TickTimer
+             UartPrintf
+             RPMmeter
+             HardwareServo
+             YpvsDriver
+
+
+build_flags = -DMAX_RPM=12000
+
 
 
 [platformio]
 include_dir = Inc
 src_dir = Src
-default_envs = bluepill_f103c8
+
 
