Changed project structure.. maybe finally

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,27 +1,45 @@
-[env:bluepill_f103c8]
-platform = ststm32
-board = bluepill_f103c8
-framework = stm32cube
+[common_env_data]
+build_flags =   -DRPM_STATE_CONSTANT=0
+                -DRPM_STATE_INCREASING=1
+                -DRPM_STATE_DECREASING=2
 
+
+
+[env:bluepill_f103c8]
+platform =      ststm32
+board =         bluepill_f103c8
+framework =     stm32cube
+lib_extra_dirs = ./Core
 build_flags =   -I./Inc
+                -I./lib
+                -I./Core
                 -DMAX_RPM=12000
+                ${common_env_data.build_flags}
+
 
 [env:native]
-platform = native
+platform =      native
+lib_ignore =    TickTimer
+                UartPrintf
+                RPMmeter
+                HardwareServo
+                YpvsDriver
+lib_extra_dirs = ./Core
+build_flags =  -I./Core
+               -DMAX_RPM=12000
+               ${common_env_data.build_flags}
 
-lib_ignore = TickTimer
-             UartPrintf
-             RPMmeter
-             HardwareServo
-             YpvsDriver
 
 
-build_flags = -DMAX_RPM=12000
 
 
 
 [platformio]
 include_dir = Inc
 src_dir = Src
+default_envs = bluepill_f103c8
+
+
+
 
 
