Added rpm peak filtering, project structure improvements

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,19 +2,20 @@
 build_flags =   -DRPM_STATE_CONSTANT=0
                 -DRPM_STATE_INCREASING=1
                 -DRPM_STATE_DECREASING=2
-
+                -DMAX_RPM=12000
 
 
 [env:bluepill_f103c8]
 platform =      ststm32
 board =         bluepill_f103c8
 framework =     stm32cube
+monitor_speed = 115200
 lib_extra_dirs = ./Core
 build_flags =   -I./Inc
                 -I./lib
                 -I./Core
-                -DMAX_RPM=12000
                 ${common_env_data.build_flags}
+
 
 
 [env:native]
@@ -24,11 +25,14 @@ lib_ignore =    TickTimer
                 RPMmeter
                 HardwareServo
                 YpvsDriver
+				ATCommands
+				ATCommandsService	
+				UartDMA
 lib_extra_dirs = ./Core
 build_flags =  -I./Core
                -DMAX_RPM=12000
                ${common_env_data.build_flags}
-
+				
 
 
 
