--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,8 @@ build_flags =   -DRPM_STATE_CONSTANT=0
 platform =      ststm32
 board =         bluepill_f103c8
 framework =     stm32cube
+debug_tool = stlink
+upload_protocol = stlink
 monitor_speed = 115200
 lib_extra_dirs = ./Core
 build_flags =   -I./Inc
