Fixed project structure

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,9 +1,3 @@
-[common_env_data]
-build_flags =   -DRPM_STATE_CONSTANT=0
-                -DRPM_STATE_INCREASING=1
-                -DRPM_STATE_DECREASING=2
-                -DMAX_RPM=12000
-
 
 [env:bluepill_f103c8]
 platform =      ststm32
@@ -12,34 +6,21 @@ framework =     stm32cube
 debug_tool = stlink
 upload_protocol = stlink
 monitor_speed = 115200
-lib_extra_dirs = ./Core
-build_flags =   -I./Inc
-                -I./lib
-                -I./Core
-                ${common_env_data.build_flags}
+build_flags = -DMAX_RPM=12000
 
 
+;[env:native]
+;platform =      native
+;lib_ignore =    TickTimer
+;                UartPrintf
+;                RPMmeter
+;                HardwareServo
+;                YpvsDriver
+;				ATCommands
+;				ATCommandsService	
+;				UartDMA
 
-[env:native]
-platform =      native
-lib_ignore =    TickTimer
-                UartPrintf
-                RPMmeter
-                HardwareServo
-                YpvsDriver
-				ATCommands
-				ATCommandsService	
-				UartDMA
-lib_extra_dirs = ./Core
-build_flags =  -I./Core
-               -DMAX_RPM=12000
-               ${common_env_data.build_flags}
 				
-
-
-
-
-
 [platformio]
 include_dir = Inc
 src_dir = Src
